# OpenGL

./: .gitignore  CMakeLists.txt  README.md
include/: Index_Buffer.h  Renderer.h  Shader.h  Texture.h  Vertex_Array.h  Vertex_Buffer.h  Vertex_Buffer_Layout.h
lib/: CMakeLists.txt
lib/stb_image/: stb_image.h
res/Shaders/: Basic.glsl
src/: CMakeLists.txt  Index_Buffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Vertex_Array.cpp  Vertex_Buffer.cpp  Vertex_Buffer_Layout.cpp  application.cpp
tests/: CMakeLists.txt
